--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,52 @@ h2.epr-emoji-category-label {
     background-color: rgba(249, 250, 251, 0.8);
 }
 
-[data-library=chat-component] .infinite-scroll-component__outerdiv{
+[data-library=chat-component] .infinite-scroll-component__outerdiv {
     width: 100%;
+}
+
+
+.container {
+    @apply bg-gray-100 rounded-full p-4 gap-1 justify-center flex items-center;
+}
+
+.dot {
+    border-radius: 9999px;
+    height: 0.7rem;
+    width: 0.7rem;
+
+    background: rgba(148 163 184 / 1);
+    animation: wave 2s infinite;
+}
+
+.dot:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes wave {
+    0%, 30% {
+        transform: translateY(0px);
+        background: rgba(148 163 184 / 0.5);
+    }
+    50% {
+        transform: translateY(-0.3rem);
+        background: rgba(148 163 184 / 0.8);
+    }
+    70%, 100% {
+        transform: translateY(0px);
+        background: rgba(148 163 184 / 0.5);
+    }
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+    /* for Chrome, Safari, and Opera */
 }
